<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bavaria_flag"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:text="@string/welcome_sign" />


    <TextView
        android:id="@+id/choose_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_select"
        android:textSize="20sp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/welcome_sign"/>

    <LinearLayout
        android:layout_below="@+id/choose_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

    <Button
        android:id="@+id/bavarian_sights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/sights_category"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bavarian_traditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bavarian_sights"
        android:text="@string/traditions_category"
        android:layout_centerHorizontal="true"/>

    </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
