<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4ca6ff"
    tools:context="com.example.android.quizapp.BavarianSights">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/Questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="38dp"
                android:text="@string/sights_question_1"
                android:textSize="20sp" />


            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Questions"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:orientation="vertical">


                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="button1"
                    android:text="@string/answer_s.1.1" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="button2"
                    android:text="@string/answer_s.1.2" />


                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="button3"
                    android:text="@string/answer_s.1.right" />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="button4"
                    android:text="@string/answer_s.1.3" />


            </LinearLayout>

            <TextView
                android:id="@+id/congrats_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/congrats_text"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sights_score_message"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/score_sights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sights_score"
                    android:textSize="20sp" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
